# rust-prototyper

./: .gitignore  2026-05-31-163924-claude-redesign-themes-generation.txt  CHAT_UX_PLAN.md  CLAUDE.md  DESIGN.md  LIVING_LOG.md  OLLAMA_RS_PLAN.md  PLAN-navigation-simplification.md  PLAN.md  PLAN_CONTEXT_MENU.md  PRODUCT.md  Prototyper - Variations.html  Prototyper.html  README.md  RELEASE_NOTES.md  TOOL_PERMISSION_ARCHITECTURE.md  agent-flow.html  agents-exploration.md  bun.lock.bak  changes.patch  coding-standards.md  eslint.config.ts  ollama-api-diagnostic.md  ollama-api-research.md  opencode.json  package.json  report-ollama-agent-testing-2.md  report-ollama-agent-testing.md  script_test_sandbox.sh  tsconfig.json  vitest.config.ts  workflow-prompt-test-1777326704855.md  workflow-prompt-test-1777326888658.md  workflows.md
docs/: _config.yml  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agent/: agent_loop.rs  claude.rs  deferred_tools.rs  executor.rs  mod.rs  research_loop.rs  research_prompts.rs  research_report.rs  tools.rs
src-tauri/src/agent/executor/: skill.rs  task_list.rs  tool_search.rs  web_fetch.rs
src-tauri/src/commands/: ai.rs  ai_ollama.rs  ai_providers.rs  bonsai.rs  bonsai_assets.rs  export.rs  fs.rs  history.rs  http.rs  mod.rs  process.rs  research.rs  workflows.rs
src-tauri/src/commands/bonsai/: assets.rs  mod.rs  paths.rs  process.rs  server.rs
src-tauri/src/sandbox/: bwrap.rs  error.rs  landlock.rs  mod.rs  policy.rs  prototyper.policy  rlimits.rs  seccomp.rs
(+409 files in other folders)
