[package]
name = "prototyper"
version = "0.1.0"
description = "Prototyper — AI-powered app generator"
authors = ["you"]
edition = "2021"
default-run = "prototyper"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures-util = "0.3"
ollama-rs = { version = "0.3", features = ["stream", "macros", "headers"] }
schemars = "1"
zip = { version = "8.5.1", features = ["deflate"] }
shlex = "1.3"
